# claim-clash-tv

./: .gitignore  AGENTS.md  BOOKMARK.txt  CHANGE LOGS.txt  ECO-EXACT-COPYRIGHT-FILES.txt  Install-Claim-Clash.ps1  MICROSOFT_STORE.md  NOTICE  OUTREACH-Enam-beta.txt  OUTREACH-beta-testers.txt  PRIVACY-POLICY.md  README.md  RELEASE_NOTES_v0.1.86.md  Refresh-Installed-Claim-Clash.ps1  Run-Claim-Clash-Setup.ps1  SECURITY.md  SUPERGROK-BRIEF.txt  SUPERGROK-IP-INVENTORY.txt  SUPERGROK-MASTER.txt  SUPPORT.md  TOMORROW-BOOKMARK.txt  build-from-scratch.ps1  build-with-checksum.ps1  claim-clash-tv.code-workspace  package-lock.json  package.json  version.json
brain-feed/: README.md  draft.json  feed.json  public.key.hex
distribution/: ALPHA-TESTER-AGREEMENT.txt  HOW-TO-INSTALL-CONSUMER.txt  HOW-TO-INSTALL.txt  PRIVACY-POLICY.txt  TROUBLESHOOTING.txt
msix/: MSIX-TESTING.txt  Package.appxmanifest  store-identity.json
scripts/: Create-GmailDrafts.ps1  alpha-keys.local.json.example  archive-alpha-baseline.ps1  build-both.ps1  build-dev.ps1  build-msix-store.ps1  build-nsis-installer.ps1  build-release.ps1  build-store.ps1  build-web.ps1  bump-067.py  bump-068.py  bump-069.py  bump-070.py  clean-old-builds.ps1  craft-current-events-question.mjs  create-gmail-drafts.gs  deploy-web.ps1  enhance-use-past.py  fix-all-export-names.py  fix-build.py  fix-em-dashes.py  (+25 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.store.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: brain_config.rs  brain_feed.rs  lib.rs  main.rs
(+27 files in other folders)
