[package]
name = "claim-clash-tv"
version = "0.1.91"
description = "Claim Clash - Structured Fact-Finding Between Opposing Perspectives"
authors = ["Zachary H. Roberts"]
license = "MIT"
# Copyright (c) 2026 Zachary H. Roberts. All rights reserved.
# "Claim Clash" is a trademark of Zachary H. Roberts.
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "claim_clash_tv_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiny_http = "0.12"
local-ip-address = "0.5"
qrcode = "0.14"
image = "0.25"
base64 = "0.22"
ed25519-dalek = { version = "2", features = ["pkcs8"] }
ureq = { version = "2", default-features = false, features = ["tls"] }
dirs = "6"

